--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mask_text_input_formatter: ^2.5.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
