--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: '>=3.1.0-146.0.dev <4.0.0'
 
 dependencies:
+  url_launcher: ^6.0.6
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.9.1
