--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.0.10
+  geolocator: ^10.0.0
   flutter_launcher_icons: ^0.9.1
   flutter_native_splash: ^1.2.0
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.10
+  http: ^1.1.0
+
+
+
 
 flutter_native_splash:
   color: "#0CB496"
