--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   provider: 6.1.1
   mask_text_input_formatter: ^2.5.0
   dio: ^4.0.0
+  firebase_core: ^2.24.0
+  firebase_messaging: ^14.7.6
 
 
 
