--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,29 @@ environment:
   sdk: '>=3.1.0-146.0.dev <4.0.0'
 
 dependencies:
-  url_launcher: ^6.0.6
   flutter:
     sdk: flutter
+  path_provider: ^2.0.13
+  flutter_local_notifications: ^12.0.0
+  audioplayers: ^5.2.1
+  just_audio: ^0.9.16
+  timezone: ^0.8.0
+  android_alarm_manager: ^2.0.2
+  google_maps_flutter: ^2.0.10
+  geolocator: ^10.0.0
   flutter_launcher_icons: ^0.9.1
   flutter_native_splash: ^1.2.0
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.10
+  http: ^1.1.0
+  provider: 6.1.1
+  mask_text_input_formatter: ^2.5.0
+  dio: ^4.0.0
+  firebase_core: ^2.24.0
+  firebase_messaging: ^14.7.6
+
+
+
 
 flutter_native_splash:
   color: "#0CB496"
@@ -41,3 +58,6 @@ flutter:
   assets:
     - assets/images/splash.png
     - assets/images/splashGreen.png
+    - res/
+    - assets/audio/
+
