--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.0.10
   geolocator: ^10.0.0
-  flutter_launcher_icons: ^0.9.1
-  flutter_native_splash: ^1.2.0
+  flutter_native_splash: ^1.3.3
+  flutter_launcher_icons: ^0.9.3
+  image: ^3.1.0
+  xml: ^5.3.0
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.10
   http: ^1.1.0
@@ -27,19 +29,27 @@ dependencies:
 
 
 
+
 flutter_native_splash:
   color: "#0CB496"
   image: "assets/images/splash.png"
   android: true
   ios: true
 
-flutter_icons:
-  image_path: "assets/app/icon.png"
+flutter_launcher_icons:
+  image_path: "assets/images/icon.png"
   ios: true
-  remove_alpha_ios: true
   android: "launcher_icon"
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/app/icon-android.png"
+  adaptive_icon_foreground: "assets/images/icon.png"
+  min_sdk_android: 21
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/images/icon.png"
+  image_path_android: "assets/images/icon.png"
+  adaptive_icon_background: "assets/images/icon.png"
+  adaptive_icon_foreground: "assets/images/icon.png"
 
 dev_dependencies:
   flutter_test:
